Add several image/link pairs

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -437,7 +437,7 @@
 
             <div class="achievement-card" data-name="the-western-frontier">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="The
+                    <img src="images/the-western-frontier.jpg" alt="The
                                 Western
                                 Frontier">
                 </div>
@@ -461,7 +461,7 @@
 
             <div class="achievement-card" data-name="in-perfect-sync">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="In Perfect Sync">
+                    <img src="images/in-perfect-sync.jpg" alt="In Perfect Sync">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -481,7 +481,7 @@
 
             <div class="achievement-card" data-name="about-to-full-burst">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="About to Full Burst">
+                    <img src="images/about-to-full-burst.jpg" alt="About to Full Burst">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -501,7 +501,7 @@
 
             <div class="achievement-card" data-name="its-called-skill">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="It's Called Skill">
+                    <img src="images/its-called-skill.jpg" alt="It's Called Skill">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
