Add several image/link pairs

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -521,7 +521,7 @@
 
             <div class="achievement-card" data-name="tempest-on-the-horizon">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Tempest on the Horizon">
+                    <img src="images/tempest-on-the-horizon.jpg" alt="Tempest on the Horizon">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -541,7 +541,7 @@
 
             <div class="achievement-card" data-name="creation-of-the-stars">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Creation of the Stars">
+                    <img src="images/creation-of-the-stars.jpg" alt="Creation of the Stars">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -561,7 +561,7 @@
 
             <div class="achievement-card" data-name="i-try-to-help">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="I Try to Help">
+                    <img src="images/i-try-to-help.jpg" alt="I Try to Help">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -602,7 +602,7 @@
 
             <div class="achievement-card" data-name="no-cap">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="No Cap">
+                    <img src="images/no-cap.jpg" alt="No Cap">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
