Add several image/link pairs

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -581,7 +581,7 @@
 
             <div class="achievement-card" data-name="give-me-something-to-break">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Give Me Something to Break">
+                    <img src="images/give-me-something-to-break.jpg" alt="Give Me Something to Break">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -622,7 +622,7 @@
 
             <div class="achievement-card" data-name="debuff-deluge">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Debuff Deluge">
+                    <img src="images/debuff-deluge.jpg" alt="Debuff Deluge">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -643,7 +643,7 @@
 
             <div class="achievement-card" data-name="welcome-to-the-crew">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Welcome to the Crew">
+                    <img src="images/welcome-to-the-crew.jpg" alt="Welcome to the Crew">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -663,7 +663,7 @@
 
             <div class="achievement-card" data-name="skies-forever-blue">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Skies Forever blue">
+                    <img src="images/skies-forever-blue.jpg" alt="Skies Forever blue">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -683,7 +683,7 @@
 
             <div class="achievement-card" data-name="no-holding-back">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="No Holding Back">
+                    <img src="images/no-holding-back.jpg" alt="No Holding Back">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -704,7 +704,7 @@
 
             <div class="achievement-card" data-name="practice-makes-perfect">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Practice Makes Perfect">
+                    <img src="images/practice-makes-perfect.jpg" alt="Practice Makes Perfect">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -724,7 +724,7 @@
 
             <div class="achievement-card" data-name="shadows-in-the-snowscape">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Shadows in the Snowscape">
+                    <img src="images/shadows-in-the-snowscape.jpg" alt="Shadows in the Snowscape">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -744,7 +744,7 @@
 
             <div class="achievement-card" data-name="makasete">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Leave It to Me">
+                    <img src="images/makasete.jpg" alt="Leave It to Me">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -764,7 +764,7 @@
 
             <div class="achievement-card" data-name="a-fateful-encounter">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="A Fateful Encounter">
+                    <img src="images/a-fateful-encounter.jpg" alt="A Fateful Encounter">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -784,7 +784,7 @@
 
             <div class="achievement-card" data-name="in-search-of-hope">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="In Search of Hope">
+                    <img src="images/in-search-of-hope.jpg" alt="In Search of Hope">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -804,7 +804,7 @@
 
             <div class="achievement-card" data-name="warning-signs">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Warning Signs">
+                    <img src="images/warning-signs.jpg" alt="Warning Signs">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -824,7 +824,7 @@
 
             <div class="achievement-card" data-name="i-like-it-when-numbers-go-up">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="I Like It When Numbers Go Up">
+                    <img src="images/i-like-it-when-numbers-go-up.jpg" alt="I Like It When Numbers Go Up">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -844,7 +844,7 @@
 
             <div class="achievement-card" data-name="relink">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="Relink">
+                    <img src="images/relink.jpg" alt="Relink">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
