Add template image elements

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -863,6 +863,9 @@
             </div>
 
             <div class="achievement-card" data-name="buff-buffet">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -881,6 +884,9 @@
             </div>
 
             <div class="achievement-card" data-name="opposing-wills">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -898,6 +904,9 @@
             </div>
 
             <div class="achievement-card" data-name="id">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -914,6 +923,9 @@
             </div>
 
             <div class="achievement-card" data-name="closer-to-the-truth">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -931,6 +943,9 @@
             </div>
 
             <div class="achievement-card" data-name="i-will-survive">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -948,6 +963,9 @@
             </div>
 
             <div class="achievement-card" data-name="knicknack-shack-regular">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -965,6 +983,9 @@
             </div>
 
             <div class="achievement-card" data-name="field-medic">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -982,6 +1003,9 @@
             </div>
 
             <div class="achievement-card" data-name="on-the-house">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -999,6 +1023,9 @@
             </div>
 
             <div class="achievement-card" data-name="a-fateful-farewell">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1016,6 +1043,9 @@
             </div>
 
             <div class="achievement-card" data-name="treasure-hunter">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1033,6 +1063,9 @@
             </div>
 
             <div class="achievement-card" data-name="skybound-heart">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
