Add implementation for several templates

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -864,7 +864,7 @@
 
             <div class="achievement-card" data-name="buff-buffet">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/buff-buffet.jpg" alt="Buff Buffet">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -885,7 +885,7 @@
 
             <div class="achievement-card" data-name="opposing-wills">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/opposing-wills.jpg" alt="Opposing Wills">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -905,7 +905,7 @@
 
             <div class="achievement-card" data-name="id">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/id.jpg" alt="Id">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -924,7 +924,7 @@
 
             <div class="achievement-card" data-name="closer-to-the-truth">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/closer-to-the-truth.jpg" alt="Closer to the Truth">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -944,7 +944,7 @@
 
             <div class="achievement-card" data-name="i-will-survive">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/i-will-survive.jpg" alt="I Will Survive">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -964,7 +964,7 @@
 
             <div class="achievement-card" data-name="knicknack-shack-regular">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/knicknack-shack-regular.jpg" alt="Knickknack Shack Regular">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -984,7 +984,7 @@
 
             <div class="achievement-card" data-name="field-medic">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/field-medic.jpg" alt="Field Medic">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -1004,7 +1004,7 @@
 
             <div class="achievement-card" data-name="on-the-house">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/on-the-house.jpg" alt="On The House">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -1024,7 +1024,7 @@
 
             <div class="achievement-card" data-name="a-fateful-farewell">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/a-fateful-farewell.jpg" alt="A Fateful Farewell">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -1044,7 +1044,7 @@
 
             <div class="achievement-card" data-name="treasure-hunter">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/treasure-hunter.jpg" alt="Treasure Hunter">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -1064,7 +1064,7 @@
 
             <div class="achievement-card" data-name="skybound-heart">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/skybound-heart.jpg" alt="Skybound Heart">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -1083,6 +1083,9 @@
             </div>
 
             <div class="achievement-card" data-name="push-it-to-the-limit">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
