--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1256,18 +1256,18 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="sharpshooter">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Sharpshooter</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">12.3%</span>
                     </div>
-                    <p class="achievement-subtitle">descriptiondescriptiondescription</p>
+                    <p class="achievement-subtitle">Destroy all guided projectiles of an enemy barrage using a single Charged Shot from an ether cannon in Chapter 4 of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="sharpshooter-toggle" data-achievement="sharpshooter" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
