--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1264,10 +1264,12 @@
                         </h3>
                         <span class="achievement-percentage">12.3%</span>
                     </div>
-                    <p class="achievement-subtitle">Destroy all guided projectiles of an enemy barrage using a single Charged Shot from an ether cannon in Chapter 4 of the main story</p>
+                    <p class="achievement-subtitle">Destroy all guided projectiles of an enemy barrage using a single
+                        Charged Shot from an ether cannon in Chapter 4 of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="sharpshooter-toggle" data-achievement="sharpshooter" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="sharpshooter-toggle" data-achievement="sharpshooter"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -1283,23 +1285,26 @@
                     <p class="achievement-subtitle">Open all locked trasure chests</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="unlocked-and-unloaded-toggle" data-achievement="unlocked-and-unloaded" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="unlocked-and-unloaded-toggle" data-achievement="unlocked-and-unloaded"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="child-of-darkness-and-flames">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Child of Darkness and Flames</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">10.6%</span>
                     </div>
-                    <p class="achievement-subtitle">descriptiondescriptiondescription</p>
+                    <p class="achievement-subtitle">Defeat Angra Mainyu without taking any damage while controlling
+                        Proto Bahamut in Chapter 8 of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="child-of-darkness-and-flames-toggle"
+                        data-achievement="child-of-darkness-and-flames" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
