Add information for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1327,18 +1327,19 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="cannon-crusher">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Cannon Crusher</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">4.7%</span>
                     </div>
-                    <p class="achievement-subtitle">descriptiondescriptiondescription</p>
+                    <p class="achievement-subtitle">Destroy all enemy cannons in Chapter 4 of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="cannon-crusher-toggle" data-achievement="cannon-crusher"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
