--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1344,18 +1344,20 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="primeval-dragon">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Primeval Dragon</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">4.0%</span>
                     </div>
-                    <p class="achievement-subtitle">descriptiondescriptiondescription</p>
+                    <p class="achievement-subtitle">Defeat Bahamut Versa Omega without taking any damage while
+                        controlling Proto Bahamut in Chapter Ø of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="primeval-dragon-toggle" data-achievement="primeval-dragon"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
