Add information for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1362,18 +1362,20 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="reminiscence">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Reminiscence</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">3.8%</span>
                     </div>
-                    <p class="achievement-subtitle">descriptiondescriptiondescription</p>
+                    <p class="achievement-subtitle">Fill in every Field Notes entry in Lyria's Journal (excluding add-on
+                        content)</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="reminiscence-toggle" data-achievement="reminiscence"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
