--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1380,18 +1380,19 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="nothing-is-impossible">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Nothing Is Impossible</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">3.4%</span>
                     </div>
-                    <p class="achievement-subtitle">descriptiondescriptiondescription</p>
+                    <p class="achievement-subtitle">Complete all side quests (excluding add-on content)</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="nothing-is-impossible-toggle" data-achievement="nothing-is-impossible"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -1402,7 +1403,7 @@
                         <h3 class="achievement-title">
                             <a href="achievements/template.html">namename</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">3.1%</span>
                     </div>
                     <p class="achievement-subtitle">descriptiondescriptiondescription</p>
                 </div>
