Add information for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1408,23 +1408,25 @@
                     <p class="achievement-subtitle">Complete the main story up to Chapter Ø on Ultimate difficulty</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="the-ultimate-toggle" data-achievement="the-ultimate" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="the-ultimate-toggle" data-achievement="the-ultimate"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="platinum-sky">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Platinum Sky</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">2.0%</span>
                     </div>
-                    <p class="achievement-subtitle">descriptiondescriptiondescription</p>
+                    <p class="achievement-subtitle">Earn all achievements</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="platinum-sky-toggle" data-achievement="platinum-sky"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
