--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1103,6 +1103,9 @@
             </div>
 
             <div class="achievement-card" data-name="dont-think-it-goes-higher-than-that">
+                <div class="achievement-image">
+                    <img src="images/dont-think-it-goes-higher-than-that.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1120,6 +1123,9 @@
             </div>
 
             <div class="achievement-card" data-name="its-all-about-communication">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1137,6 +1143,9 @@
             </div>
 
             <div class="achievement-card" data-name="wings-of-destruction">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1154,6 +1163,9 @@
             </div>
 
             <div class="achievement-card" data-name="chain-burst-champion">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1172,6 +1184,9 @@
             </div>
 
             <div class="achievement-card" data-name="true-potential">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1189,6 +1204,9 @@
             </div>
 
             <div class="achievement-card" data-name="making-ends-meet">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1206,6 +1224,9 @@
             </div>
 
             <div class="achievement-card" data-name="squads-all-here">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1223,6 +1244,9 @@
             </div>
 
             <div class="achievement-card" data-name="primal-beast-punisher">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1240,6 +1264,9 @@
             </div>
 
             <div class="achievement-card" data-name="crabs-are-neat">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1257,6 +1284,9 @@
             </div>
 
             <div class="achievement-card" data-name="sharpshooter">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1275,6 +1305,9 @@
             </div>
 
             <div class="achievement-card" data-name="unlocked-and-unloaded">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1292,6 +1325,9 @@
             </div>
 
             <div class="achievement-card" data-name="child-of-darkness-and-flames">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
