Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1124,7 +1124,7 @@
 
             <div class="achievement-card" data-name="its-all-about-communication">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/its-all-about-communication.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
