--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1144,7 +1144,7 @@
 
             <div class="achievement-card" data-name="wings-of-destruction">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/wings-of-destruction.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
