--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1164,7 +1164,7 @@
 
             <div class="achievement-card" data-name="chain-burst-champion">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/chain-burst-champion.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
