Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1185,7 +1185,7 @@
 
             <div class="achievement-card" data-name="true-potential">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/true-potential.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
