Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1205,7 +1205,7 @@
 
             <div class="achievement-card" data-name="making-ends-meet">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/making-ends-meet.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
