--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1225,7 +1225,7 @@
 
             <div class="achievement-card" data-name="squads-all-here">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/squads-all-here.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
