Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1245,7 +1245,7 @@
 
             <div class="achievement-card" data-name="primal-beast-punisher">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/primal-beast-punisher.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
