--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1265,7 +1265,7 @@
 
             <div class="achievement-card" data-name="crabs-are-neat">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/crabs-are-neat.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
