--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1285,7 +1285,7 @@
 
             <div class="achievement-card" data-name="sharpshooter">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/sharpshooter.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
