Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1306,7 +1306,7 @@
 
             <div class="achievement-card" data-name="unlocked-and-unloaded">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/unlocked-and-unloaded.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
