Add template hyperlinks for remainder of achievements

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1346,6 +1346,9 @@
             </div>
 
             <div class="achievement-card" data-name="fate-cant-wait">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1364,6 +1367,9 @@
             </div>
 
             <div class="achievement-card" data-name="cannon-crusher">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1381,6 +1387,9 @@
             </div>
 
             <div class="achievement-card" data-name="primeval-dragon">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1399,6 +1408,9 @@
             </div>
 
             <div class="achievement-card" data-name="reminiscence">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1417,6 +1429,9 @@
             </div>
 
             <div class="achievement-card" data-name="nothing-is-impossible">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1434,6 +1449,9 @@
             </div>
 
             <div class="achievement-card" data-name="the-ultimate">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -1451,6 +1469,9 @@
             </div>
 
             <div class="achievement-card" data-name="platinum-sky">
+                <div class="achievement-image">
+                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
