--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1326,7 +1326,7 @@
 
             <div class="achievement-card" data-name="child-of-darkness-and-flames">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/child-of-darkness-and-flames.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
