Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1084,7 +1084,7 @@
 
             <div class="achievement-card" data-name="push-it-to-the-limit">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/push-it-to-the-limit.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
