Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1347,7 +1347,7 @@
 
             <div class="achievement-card" data-name="fate-cant-wait">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/fate-cant-wait.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
