Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1388,7 +1388,7 @@
 
             <div class="achievement-card" data-name="primeval-dragon">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/primeval-dragon.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
