Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1409,7 +1409,7 @@
 
             <div class="achievement-card" data-name="reminiscence">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/reminiscence.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
