--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1470,7 +1470,7 @@
 
             <div class="achievement-card" data-name="platinum-sky">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/platinum-sky.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
