Add link to image for achievement

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -1450,7 +1450,7 @@
 
             <div class="achievement-card" data-name="the-ultimate">
                 <div class="achievement-image">
-                    <img src="images/linklinklink.jpg" alt="imagetitle">
+                    <img src="images/the-ultimate.jpg" alt="imagetitle">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
