--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -326,6 +326,13 @@
         category: "Covenant"
       },
       {
+        id: "achievement_identifier",
+        title: "achievement_title",
+        description: "achievement_description",
+        difficulty: "achievement_difficulty",
+        category: "achievement_category"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
