Add titles for 3 new achievements

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -327,21 +327,21 @@
       },
       {
         id: "achievement_identifier",
-        title: "achievement_title",
+        title: "Art of Abysswalking",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "achievement_identifier",
-        title: "achievement_title",
+        title: "Defeat Seath the Scaleless",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "achievement_identifier",
-        title: "achievement_title",
+        title: "Defeat the Four Kings",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
