Add id for 3 new cards

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -326,21 +326,21 @@
         category: "Covenant"
       },
       {
-        id: "achievement_identifier",
+        id: "abysswalking",
         title: "Art of Abysswalking",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "achievement_identifier",
+        id: "seath",
         title: "Defeat Seath the Scaleless",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "achievement_identifier",
+        id: "nito",
         title: "Defeat the Four Kings",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
