Add difficulties for cards

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -329,21 +329,21 @@
         id: "abysswalking",
         title: "Art of Abysswalking",
         description: "achievement_description",
-        difficulty: "achievement_difficulty",
+        difficulty: "Painful",
         category: "achievement_category"
       },
       {
         id: "seath",
         title: "Defeat Seath the Scaleless",
         description: "achievement_description",
-        difficulty: "achievement_difficulty",
+        difficulty: "Easy",
         category: "achievement_category"
       },
       {
         id: "nito",
         title: "Defeat the Four Kings",
         description: "achievement_description",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
