Add categories for cards

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -330,21 +330,21 @@
         title: "Art of Abysswalking",
         description: "achievement_description",
         difficulty: "Painful",
-        category: "achievement_category"
+        category: "Boss Drop"
       },
       {
         id: "seath",
         title: "Defeat Seath the Scaleless",
         description: "achievement_description",
         difficulty: "Easy",
-        category: "achievement_category"
+        category: "Progress"
       },
       {
         id: "nito",
         title: "Defeat the Four Kings",
         description: "achievement_description",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Progress"
       },
       {
         id: "achievement_identifier",
