Add description for art of abysswalking

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -328,7 +328,7 @@
       {
         id: "abysswalking",
         title: "Art of Abysswalking",
-        description: "achievement_description",
+        description: "Acquire the Art of Abysswalking",
         difficulty: "Painful",
         category: "Boss Drop"
       },
