Add description for seath

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -335,7 +335,7 @@
       {
         id: "seath",
         title: "Defeat Seath the Scaleless",
-        description: "achievement_description",
+        description: "Defaet Seath the Scaleless, inheritor of souls",
         difficulty: "Easy",
         category: "Progress"
       },
